fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,7 @@ img{
     width: 50px;
     border-radius: 50%;
 }
-.row{
-    height: 100%;
-}
+
 .row > *{
     padding: 0;
 }
